--- a/theme/assets/styles/global.css
+++ b/theme/assets/styles/global.css
@@ -12,8 +12,12 @@
 
 .wpcloud-hide {
 	opacity: 0;
+	display: none;
 	height: 0 !important;
 	padding: 0 !important;
+}
+.display-none {
+	display: none;
 }
 
 .wp-block-heading a:hover {
