--- a/theme/assets/blocks/src/wpcloud-site-details.css
+++ b/theme/assets/blocks/src/wpcloud-site-details.css
@@ -3,4 +3,7 @@
 	.wp-block-heading {
 		text-wrap: nowrap;
 	}
+	&.wpcloud-admin-only {
+		border-color: var(--wp--preset--color--accent-primary);
+	}
 }
