--- a/theme/assets/blocks/src/wpcloud-table-cell.css
+++ b/theme/assets/blocks/src/wpcloud-table-cell.css
@@ -5,9 +5,15 @@
 		justify-content: left;
 	}
 
-
-.wp-block-wpcloud-site-detail, .wpcloud-block-site-detail {
+	.wp-block-wpcloud-site-detail, .wpcloud-block-site-detail {
 		margin-top: 0;
 		padding: 0;
+	}
+	&.wpcloud-admin-only {
+		* {
+			text-decoration: underline;
+			text-decoration-color: var(--wp--preset--color--accent-primary);
+			text-underline-offset: 2px;
+		}
 	}
 }
